--- a/index.html
+++ b/index.html
@@ -482,6 +482,8 @@
     <a href="#" title="تيك توك"><i class="fab fa-tiktok"></i></a>
     <a href="#" title="سناب شات"><i class="fab fa-snapchat-ghost"></i></a>
     <a href="#" title="X"><i class="fab fa-twitter"></i></a>
+    <a href="#" title="يوتيوب"><i class="fab fa-youtube"></i></a>
+
   </div>
 </footer>
 
